<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<TextView
	    android:id="@+id/tableNumberTextView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Mesa: "
	    android:layout_marginTop="4dp"
	    android:layout_marginLeft="4dp"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
    <Button
        android:id="@+id/addProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableNumberTextView"
        android:text="@string/add_product" 
        android:onClick="addProduct"/>
    
    <ListView
        android:id="@+id/orderListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addProductButton"
        android:layout_above="@+id/footer"/>
    
	<LinearLayout
	    android:id="@+id/footer"
	    android:layout_alignParentBottom="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <Button
	        android:id="@+id/cancelOrderButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
	    
	    <Button
	        android:id="@+id/confirmOrderButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/confirm" />
	    
	</LinearLayout>

</RelativeLayout>